--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div id='root'></div>
-    <script src="./dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
